--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:onClick="goToMap"
+        android:text="@string/button_map" />
 
 </RelativeLayout>
