--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/player"
+        android:icon="@drawable/ic_action_person"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/player"
+        android:visible="true"/>
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
