--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -37,4 +37,28 @@
         android:onClick="goToBattle"
         android:text="@string/ivrea_map_button_battle" />
 
+    <!-- sign-in button -->
+
+
+    <!-- sign-out button -->
+
+    <Button
+        android:id="@+id/sign_out_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:text="Sign Out"
+        android:visibility="gone" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp" >
+    </com.google.android.gms.common.SignInButton>
+
 </RelativeLayout>
