--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_id">1002584639124</string>
+    <string name="google_maps_api">AIzaSyDEjHJePG4sh72hPNG4jENRn162de9mMJU</string>
 </resources>
