--- a/res/layout/player_activity.xml
+++ b/res/layout/player_activity.xml
@@ -65,5 +65,17 @@
             android:text="punti"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
+    
+        <Button
+        android:id="@+id/leaderboardBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="35dp"
+        android:onClick="showLeaderboard"
+        android:text="Classifica" />
+
+    
 
 </LinearLayout>
