--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_id">1002584639124</string>
     <string name="google_maps_api">AIzaSyBYsYBmq72jEOVtW27EYBZ2Gh-Mr30CWII</string>
+    <string name="aranceri_leaderboards">CgkIlI3O9ZYdEAIQAQ</string>
 </resources>
