--- a/res/layout/player_activity.xml
+++ b/res/layout/player_activity.xml
@@ -57,7 +57,6 @@
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
-
         <TextView
             android:id="@+id/points_counter"
             android:layout_width="wrap_content"
@@ -65,8 +64,8 @@
             android:text="punti"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
-    
-        <Button
+
+    <Button
         android:id="@+id/leaderboardBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,6 +75,24 @@
         android:onClick="showLeaderboard"
         android:text="Classifica" />
 
-    
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textColorLink="@color/white" >
+    </com.google.android.gms.common.SignInButton>
+
+    <Button
+        android:id="@+id/sign_out_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/orange_button"
+        android:padding="5dp"
+        android:text="@string/log_out"
+        android:textColor="@color/ivreaBlue"
+        android:textColorHint="@color/ivreaBlue"
+        android:textColorLink="@color/ivreaBlue" />
 
 </LinearLayout>
