--- a/res/drawable/orange_button.xml
+++ b/res/drawable/orange_button.xml
@@ -2,23 +2,23 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
  <item android:state_pressed="true" >
      <shape android:shape="rectangle"  >
-         <corners android:radius="100dp" />
+         <corners android:radius="60dp" />
          <stroke android:width="1dp" android:color="@color/ivreaGray" />
-         <gradient android:angle="-90" android:startColor="@color/ivreaGray" android:endColor="@color/ivreaGrayLight"  />            
+         <solid android:color="@color/ivreaOrangeLight"/>
      </shape>
  </item>
 <item android:state_focused="true">
      <shape android:shape="rectangle"  >
-         <corners android:radius="100dp" />
-         <stroke android:width="1dp" android:color="@color/ivreaGray" />
-         <solid android:color="@color/ivreaGray"/>       
+         <corners android:radius="60dp" />
+         <stroke android:width="1dp" android:color="@color/ivreaOrange" />
+         <solid android:color="@color/ivreaOrangeLight"/>       
      </shape>
  </item>  
 <item >
     <shape android:shape="rectangle"  >
-         <corners android:radius="100dp" />
+         <corners android:radius="60dp" />
          <stroke android:width="1dp" android:color="@color/ivreaGray" />
-         <gradient android:angle="-90" android:startColor="@color/ivreaGray" android:endColor="@color/ivreaGrayLight" />            
+         <solid android:color="@color/ivreaOrange"/>
      </shape>
  </item>
 </selector>
