--- a/res/layout/player_activity.xml
+++ b/res/layout/player_activity.xml
@@ -1,8 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/player_activity_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/ivreaGray"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,70 +12,61 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+    <ImageView
+        android:id="@+id/profileImage"
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        android:contentDescription="@string/player"
+        android:src="@drawable/profile" />
 
-        <ImageView
-            android:id="@+id/profileImage"
-            android:layout_width="76dp"
-            android:layout_height="76dp"
-            android:contentDescription="Me" />
-
-        <TextView
-            android:id="@+id/playerName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Player Name"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/playerName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
+        android:text="@string/default_player_name"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="37dp"
-            android:layout_height="37dp"
-            android:src="@drawable/orange" />
+    <View
+        android:id="@+id/hr"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/gray" />
 
-        <TextView
-            android:id="@+id/oranges_counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="arance"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/oranges_counter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:drawableLeft="@drawable/orange"
+        android:drawablePadding="5dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:text="@string/orange"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/points_counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="punti"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/points_counter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:drawableLeft="@drawable/orange"
+        android:drawablePadding="5dp"
+        android:gravity="center_vertical"
+        android:text="@string/point"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/leaderboardBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="30dp"
         android:onClick="showLeaderboard"
-        android:text="Classifica" />
+        android:text="@string/leaderboard_btn" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
@@ -93,6 +86,7 @@
         android:text="@string/log_out"
         android:textColor="@color/ivreaBlue"
         android:textColorHint="@color/ivreaBlue"
-        android:textColorLink="@color/ivreaBlue" />
+        android:textColorLink="@color/ivreaBlue"
+        android:visibility="gone" />
 
 </LinearLayout>
