--- a/res/layout/map_activity.xml
+++ b/res/layout/map_activity.xml
@@ -1,31 +1,34 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity" >
+    android:layout_height="fill_parent" >
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.90" />
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true" />
 
     <LinearLayout
         android:id="@+id/placebar_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.10"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/overmap"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/ivrea_map_suggest"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_vertical|center_horizontal"
+            android:padding="10dp"
             android:text="@string/ivrea_map_suggest"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
