--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/predaindora_bg"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="6"
