--- a/res/layout/preda_in_dora.xml
+++ b/res/layout/preda_in_dora.xml
@@ -7,108 +7,59 @@
     tools:context=".MainActivity" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/predaindora_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/predaindora_bg"
+        android:scaleType="centerCrop"
         android:src="@drawable/mg_predaindora_bg" />
 
-    <TextView
-        android:id="@+id/instructionPiD"
+    
+    <RelativeLayout
+        android:id="@+id/rocksContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#99000000"
-        android:gravity="center_horizontal|center_vertical"
-        android:minEms="2"
-        android:minLines="2"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:text="Colpisci una pietra"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white"
-        android:textStyle="italic" />
-
-    <LinearLayout
-        android:id="@+id/rockCont"
-        android:layout_width="wrap_content"
-        android:layout_height="180dp"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/instructionPiD"
-        android:layout_margin="5dp"
-        android:padding="3dp" >
-
-        <ImageView
-            android:id="@+id/rock1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:onClick="breakRock"
-            android:src="@drawable/mg_sasso" />
-
-        <ImageView
-            android:id="@+id/rock2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:onClick="breakRock"
-            android:src="@drawable/mg_sasso" />
-
-        <ImageView
-            android:id="@+id/rock3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:onClick="breakRock"
-            android:src="@drawable/mg_sasso" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/pidOrangeCont"
-        android:layout_width="wrap_content"
-        android:layout_height="180dp"
-        android:layout_alignBottom="@+id/rockCont"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/rockCont"
-        android:layout_alignTop="@+id/rockCont"
-        android:layout_margin="5dp"
-        android:layout_weight="0.3"
-        android:padding="3dp" >
+        android:layout_alignParentTop="true"
+        android:visibility="invisible"
+        >
 
-        <TextView
-            android:id="@+id/pidRockOr1"
-            android:layout_width="wrap_content"
+        <View
+            android:id="@+id/emptyView"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:alpha="0"
-            android:gravity="center"
-            android:text="40"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/pidRockOr2"
+            android:visibility="invisible" />
+        
+        <ImageButton
+            android:id="@+id/rock3"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:alpha="0"
-            android:gravity="center"
-            android:text="30"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/emptyView"
+            android:layout_alignTop="@id/emptyView"
+            android:layout_marginTop="18dp"
+            android:layout_marginLeft="100dp"
+            android:background="@drawable/rock3"
+            android:contentDescription="@string/predaindora_btn" />
 
-        <TextView
-            android:id="@+id/pidRockOr3"
+        <ImageButton
+            android:id="@+id/rock2"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:alpha="0"
-            android:gravity="center"
-            android:text="20"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/emptyView"
+            android:layout_alignTop="@id/emptyView"
+            android:layout_marginTop="220dp"
+            android:layout_marginLeft="226dp"
+            android:background="@drawable/rock2"
+            android:contentDescription="@string/predaindora_btn" />
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/rock1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rock1"
+            android:contentDescription="@string/predaindora_btn" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
