--- a/res/layout/preda_in_dora.xml
+++ b/res/layout/preda_in_dora.xml
@@ -20,17 +20,27 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:baselineAligned="false" >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical" >
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
+
+                <ImageButton
+                    android:id="@+id/rock1_after"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/rock1_after"
+                    android:contentDescription="@string/predaindora_btn" />
 
                 <ImageButton
                     android:id="@+id/rock1"
@@ -43,31 +53,52 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
 
                 <ImageButton
-                    android:id="@+id/rock2"
+                    android:id="@+id/rock3_after"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/rock2"
+                    android:background="@drawable/rock3_after"
+                    android:contentDescription="@string/predaindora_btn" />
+
+                <ImageButton
+                    android:id="@+id/rock3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/rock3"
                     android:contentDescription="@string/predaindora_btn"
                     android:onClick="breakRock" />
             </FrameLayout>
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/rock3"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/rock3"
-            android:contentDescription="@string/predaindora_btn"
-            android:onClick="breakRock" />
+            android:layout_weight="1" >
+
+            <ImageButton
+                android:id="@+id/rock2_after"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/rock2_after"
+                android:contentDescription="@string/predaindora_btn" />
+
+            <ImageButton
+                android:id="@+id/rock2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/rock2"
+                android:contentDescription="@string/predaindora_btn"
+                android:onClick="breakRock" />
+        </FrameLayout>
     </LinearLayout>
 
 </RelativeLayout>
