--- a/res/layout/general_placebar.xml
+++ b/res/layout/general_placebar.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="left"
+    android:onClick="openPlace"
     android:orientation="horizontal" >
 
     <com.mobsandgeeks.ui.TypefaceTextView
@@ -25,9 +26,9 @@
         android:id="@+id/overview_icon_cont"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
+        android:layout_gravity="right"
         android:layout_weight="1"
-        android:gravity="left"
+        android:gravity="right"
         android:orientation="horizontal"
         android:paddingBottom="15dp"
         android:paddingLeft="5dp"
@@ -38,7 +39,7 @@
             android:id="@+id/minigame_ico"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_gravity="right"
             android:contentDescription="@string/ivrea_map_button_minigame"
             android:src="@drawable/badge_minigame"
             android:visibility="gone" />
@@ -47,7 +48,7 @@
             android:id="@+id/history_ico"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_gravity="right"
             android:contentDescription="@string/ivrea_map_button_history"
             android:src="@drawable/badge_history" />
     </LinearLayout>
