--- a/res/layout/place_activity.xml
+++ b/res/layout/place_activity.xml
@@ -25,7 +25,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="64dp"
-        android:text="Minigame" />
+        android:text="Minigame" 
+        android:onClick="goToMinigame"/>
 
     <Button
         android:id="@+id/battle_MOR"
@@ -34,6 +35,17 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="142dp"
-        android:text="Battle" />
+        android:text="Battle" 
+        android:onClick="goToBattle"/>
+
+    <Button
+        android:id="@+id/battle_PiC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:onClick="onStartMatchClicked"
+        android:text="Sfida" />
 
 </RelativeLayout>
