--- a/res/layout/map_activity.xml
+++ b/res/layout/map_activity.xml
@@ -16,19 +16,23 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/overmap"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="10dp" >
 
         <TextView
             android:id="@+id/ivrea_map_suggest"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical|center_horizontal"
-            android:padding="10dp"
+            android:paddingLeft="10dp"
             android:text="@string/ivrea_map_suggest"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
     </LinearLayout>
 
     <ImageButton
@@ -37,9 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/placebar_container"
         android:layout_centerHorizontal="true"
+        android:layout_margin="0dp"
         android:background="@drawable/overmap_open"
         android:contentDescription="@string/ivrea_map_button_openplace"
-        android:onClick="openPlace"
-        android:visibility="gone" />
+        android:onClick="openPlace" android:visibility="gone" />
 
 </RelativeLayout>
