--- a/res/layout/start_minigame_activity.xml
+++ b/res/layout/start_minigame_activity.xml
@@ -4,37 +4,78 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:layout_margin="0dp"
+    android:background="@drawable/predaindora_bg"
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <ImageView
-        android:id="@+id/bgImageMinigame"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:scaleType="centerCrop" />
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/descrStartMinigame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#99000000"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:textColor="@android:color/white"
-        android:textStyle="italic" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="80"
+            android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/btnStartMinigame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:onClick="play"
-        android:text="Comincia" />
+            <ImageView
+                android:id="@+id/character"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="14dp"
+                android:src="@drawable/podesta"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/descrStartMinigame"
+                android:layout_width="match_parent"
+                android:layout_height="152dp"
+                android:layout_gravity="center_vertical"
+                android:background="#99000000"
+                android:text="Descr goes here"
+                android:textColor="@android:color/white"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/btnStartMinigame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/orange_button"
+                android:onClick="play"
+                android:text="Comincia" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout1"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" >
+
+                <TextView
+                    android:id="@+id/mgTimerTextA"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Prossima partita tra"
+                    android:textColor="@android:color/white" />
+
+                <TextView
+                    android:id="@+id/mgTimerText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Medium Text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/mgTimerBar"
@@ -44,28 +85,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true" />
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/mgTimerBar"
-        android:layout_centerHorizontal="true" >
-
-        <TextView
-            android:id="@+id/mgTimerTextA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prossima partita tra"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/mgTimerText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/white" />
-
-    </LinearLayout>
+        android:layout_marginRight="14dp"
+        android:src="@drawable/podesta" />
 
 </RelativeLayout>
