--- a/res/xml/places.xml
+++ b/res/xml/places.xml
@@ -4,9 +4,14 @@
     <place
         id="1"
         name="Castellazzo"
+        bg="place_castellazzo_bg"
         latlng="45.465090, 7.872041"
-        minigame="true"
-        xy="127,253" />
+        minigame="PredaInDora"
+        minigame_bg="PredaInDora"
+        minigame_descr="Il Podestà era il supremo capo del governo del Comune, nominato ogni anno dai Credendari, i “senatori” della Città.
+Quando entrava in carica, svolgeva la cerimonia chiamata Preda in Dora: andava a prelevare, con un apposito martello conservato in Comune, un sasso tra i ruderi del Castellazzo e lo gettava in Dora in spregio al Marchese del Monferrato.
+
+Il giocatore può scegliere fra 3 sassi dei ruderi per colpirlo con il suo martello. Un numero diverso di arance è nascosto sotto ciascun sasso. Il giocatore vincerà il numero di arance corrispondente al sasso scelto." />
     <place
         id="2"
         name="Piazza di Città"
