--- a/res/layout/general_placebar.xml
+++ b/res/layout/general_placebar.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="left"
+    android:gravity="center_horizontal"
     android:onClick="openPlace"
     android:orientation="horizontal" >
 
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:layout_weight="1"
         android:gravity="center_vertical|center_horizontal"
         android:paddingLeft="10dp"
         android:text="@string/ivrea_map_suggest"
@@ -27,8 +26,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        android:layout_weight="1"
-        android:gravity="right"
         android:orientation="horizontal"
         android:paddingBottom="15dp"
         android:paddingLeft="5dp"
